# swot-reservoir-wse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: introduction.md
swot_wse/: cli.py  config.py  earth_engine.py  outputs.py  pipeline.py
swot_wse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
swot_wse/cache/: polygon_cache.py
swot_wse/filtering/: stages.py
swot_wse/geometry/: reservoir_extractor.py
swot_wse/lakesp/: discovery.py  extract.py  search.py
